# Computer-Vision-And-Machine-Learning

./: .gitignore  .gitmodules  Computer-Vision.tex  ORBDetect.cpp  README.md  basic2.py  cannyedge.py  hw2test.py  testhw.py
Nascent Tech CV Job/Dice Dots/1 - Count Dice Dots/win/CountDiceDots/: CountDiceDots.sln
Nascent Tech CV Job/Dice Dots/1 - Count Dice Dots/win/CountDiceDots/CountDiceDots/: CountDiceDots.cpp  CountDiceDots.vcxproj  CountDiceDots.vcxproj.filters
OpenCVPython/: Homework0.py  ORBDetect.cpp  OpenCVPython.tex  README.md  basic1.py  basic2.py  basic3.py  basic4.py  basic5.py  basic6.py  bfstest.py  core1.py  core2.py  core3.py  homework2python.py  hw2.py  main_desktop.cpp  orbtest.py  output.avi  sfsdfaf.py
OpenCVWindows/: CMakeLists.txt  displayimage.cpp
sfm-learning/: .gitignore  CMakeLists.txt  README.md  System.h.gch  main.cpp
sfm-learning/Examples/: main.cpp
sfm-learning/include/: FeatureDetector.h  System.h
sfm-learning/src/: System.cpp
